syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "conversation.proto";
import "map_item.proto";
import "message.proto";
import "offer.proto";
import "user.proto";

message ItemDto {
    oneof data {
        OfferDto offer = 1;
        UserDto user = 2;
        MapItemDto mapItem = 3;
        ConversationDto conversation = 4;
        MessageDto message = 5;
    }
}
