syntax = "proto3";

package api;
option csharp_namespace = "API.Interfaces";

import "image.proto";
import "location.proto";
import "optional.proto";
import "social_media_account.proto";

enum UserType {
    unknownUserType = 0;
    influencer = 1;
    business = 2;
    support = 3;
    admin = 4;
}

// Here we need a discussion what states make sense
enum AccountState {
    unknown = 0;
    disabled = 1;
    active = 2;
    waitingForActivation = 3; // User has signed up but not clicked on his signup link
    waitingForApproval = 4; // User did not fullfill all requirements for direct signup waiting for manual approval
    rejected = 5;

    // These are the old definitions, not sure if they all make sense
// GASR_NEW_ACCOUNT = 0; // User is a new account
// GASR_ACCOUNT_BANNED = 1; // User is disallowed from the service
// GASR_CREATE_DENIED = 2; // User account creation request was denied. Contact support
// GASR_APPROVED = 3; // User account was approved
// GASR_DEMO_APPROVED = 4; // User account was automatically approved for demonstration purpose
// GASR_PENDING = 5; // User account approval is pending
// GASR_REQUIRE_INFO = 6; // More information is required from the user to approve their account

}

message UserDto {
    OptionalString id = 1;
    bool verified = 2;
    AccountState accountState = 3;
    UserType userType = 4;
    string name = 5;
    string description = 6;
    string email = 7;
    string websiteUrl = 8;
    bool acceptsDirectOffers = 9;
    bool showLocation = 10;
    int32 accountCompletionInPercent = 11;
    LocationDto location = 12;
    ImageDto avatar = 13;
    ImageDto avatarThumbnail = 14;
    repeated int32 categoryIds = 15;
    int32 minimalFee = 16;

    repeated SocialMediaAccountDto socialMediaAccounts = 25;
}